mobile styling for footer, hero image, and button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container home">
       <header class="intro">
         <!-- image code here -->
-        <img src="./img/main-header.png" alt="earth-horizon" />
+        <img src="./img/main-header.png" class="hero-img" alt="earth-horizon" />
         <h2>Lift Off</h2>
 
         <p>
