add magazine subscription form and style for mobile

--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
             the planet Earth.
           </p>
 
-          <div class="btn">
-            Sign Up
-          </div>
+          <a class="btn" href="./signup.html">Sign Up</a>
         </div>
 
         <div class="walk-img">
