update mobile styling to support iphone 8 breakpoints

--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
         <li>Sign In</li>
       </ul>
     </nav>
-    <h2>Subscribe to Our Magazine!</h2>
+    <h2 class="subscription-header">Subscribe to Our Magazine!</h2>
     <div class="container">
       <form action="">
         <div class="row">
